modif des commandes dans le readme