@@ -9,16 +9,22 @@
 ### commande pour compiler (linux puis windows)
 
 javac -d bin -cp .:lib/gson-2.10.1.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls *.java
-javac -d bin -cp ".;lib/gson-2.10.1.jar" *.java
+javac -d bin -cp ".;lib/gson-2.10.1.jar" --module-path c:\\Users\\Utilisateur\\Desktop\\TéléchargementBis\\openjfx\\javafx-sdk-20.0.1\\lib\\ --add-modules javafx.controls *.java
 
 ### commande pour executer
 
+linux :
 
 java -cp .:bin:lib/gson-2.10.1.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls Tuito
 java -cp .:bin:lib/gson-2.10.1.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls Client
 
 java -cp .:bin:lib/gson-2.10.1.jar Server
 java -cp .:bin:lib/gson-2.10.1.jar Client
+
+windows :
+
+java -cp ".;bin;lib/gson-2.10.1.jar" --module-path c:\\Users\\Utilisateur\\Desktop\\TéléchargementBis\\openjfx\\javafx-sdk-20.0.1\\lib\\ --add-modules javafx.controls Tuito
+java -cp ".;bin;lib/gson-2.10.1.jar" --module-path c:\\Users\\Utilisateur\\Desktop\\TéléchargementBis\\openjfx\\javafx-sdk-20.0.1\\lib\\ --add-modules javafx.controls Client
 
 java -cp ".;bin;lib/gson-2.10.1.jar" Server
 java -cp ".;bin;lib/gson-2.10.1.jar" Client
